# test

./: .gitignore  MANIFEST.in  README.md  logging.yml  temp_main.py
back/: .gitlab-ci.yml  pyproject.toml  smartlink.code-workspace
back/mariadb/: docker-compose.yml  stations.csv
back/src/tas/dcc/smartlink/api/: main.py
back/src/tas/dcc/smartlink/api/converters/: constellation.py  horizon.py  station.py
back/src/tas/dcc/smartlink/api/routers/: constellations.py  systems.py  topologies.py  utils.py
back/src/tas/dcc/smartlink/api/schemas/: __init__.py  constellation.py  eligibility.py  ephemeris.py  error.py  station.py  topology.py  utils.py
back/src/tas/dcc/smartlink/database/managers/: __init__.py  eligibilities.py  ephemeris.py  stations.py  topologies.py  utils.py
back/src/tas/dcc/smartlink/database/models/: constellation.py  ground_segment.py  topology.py
back/src/tas/dcc/smartlink/utils/: collections.py
back/src/tas/dcc/smartlink/utils/builder/: constellation.py  topology.py
back/tests/: README.md
back/tests/api/: client.py  test_constellations.py  test_stations.py  test_systems.py
front/: .prettierrc  README.md  index.html  package.json  tsconfig.json  vite.config.ts
front/src/: App.tsx  app.module.css  index.css  index.tsx
front/src/client/: index.ts
front/src/client/models/: Body_import_stations.ts  Constellation.ts  ConstellationCreate.ts  ConstellationDelete.ts  ConstellationInfo.ts  Eligibility.ts  EligibilityMask.ts  EligibilityRequest.ts  Ephemeris.ts  EphemerisPosition.ts  EphemerisRequest.ts  EphemerisResponse.ts  EphemerisVelocity.ts  ErrorMessage.ts  FloatDataFormat.ts  GroundSegment.ts  GroundSegmentCreate.ts  GroundSegmentInfo.ts  Horizon.ts  Location.ts  Satellite.ts  SatelliteOrbit.ts  SimpleTopologyParameters.ts  Station.ts  StationCreate.ts  System.ts  SystemCreate.ts  (+7 more)
front/src/store/: index.ts
front/src/themes/: index.ts  smartlink.ts
front/src/utils/: collection.ts
mariadb/: populate.py
tests/: conftest.py  docker-compose.yml  init-db.ps1
tests/api/: test_ephemeris.py
(+115 files in other folders)
